--- a/Site/Public/index.html
+++ b/Site/Public/index.html
@@ -27,6 +27,9 @@
         <div class="banner">
             Treinamento Funcional
         </div>
+        <div class="img1">
+            <img src="assets/Marias1.jpeg" alt="Imagem1">
+        </div>
     </header>
 </body>
 </html>
