inicio do sobre-nos  e footer

--- a/Site/Public/index.html
+++ b/Site/Public/index.html
@@ -5,31 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MariaS</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
 </head>
 <body>
     <nav>
         <div class="bg-nav">
             <div class="container">
                 <div class="nav-left">
-                    <a href="#"><img src="assets/LogoMarias.jpg" alt="Logo"></a>
+                    <a href="#"><img src="assets/LogoMarias-removebg-preview.png" alt="Logo"></a>
                 </div>
                 <div class="nav-right">
-                    <div class="txt"><a href="#">Texto1</a></div>
-                    <div class="txt"><a href="#">Texto2</a></div>
-                    <div class="txt"><a href="#">Texto3</a></div>
-                    <div class="txt"><a href="#">Texto4</a></div>
+                    <div class="txt"><a href="#">Planos</a></div>
+                    <div class="txt"><a href="#">Sobre Nós</a></div>
                 </div>
             </div>
         </div>
     </nav>
 
     <header>
-        <div class="banner">
-            Treinamento Funcional
-        </div>
+
         <div class="img1">
             <img src="assets/Marias1.jpeg" alt="Imagem1">
         </div>
+
+        <div class="sobre-nos">
+            Sobre nós
+        </div>
     </header>
+
+    <footer>
+        <div class="bg-footer">
+            <div class="footer">
+                <img src="assets/LogoMarias-removebg-preview.png" alt="Logo">
+            </div>
+            <div class="linha"></div>
+            <div class="txt-footer">
+                <div class="institucional">
+                    Institucional
+                </div>
+                <div class="barra"></div>
+                <div class="redes">
+                    <div class="titulo">Redes Sociais</div>  
+                </div>
+            </div>
+        </div>
+        
+    </footer>
 </body>
 </html>
