edição do footer

--- a/Site/Public/index.html
+++ b/Site/Public/index.html
@@ -52,7 +52,13 @@
                 <div class="barra"></div>
                 <div class="redes">
                     <div class="titulo">Redes Sociais</div>  
+                    <div class="footer-icons">
+                        <a href="https://www.instagram.com/treinomarias?igsh=M2R1ZXNzeXNqbWti" target="_blank" <i class="bi bi-instagram"></i></a>
+                        <a href="https://wa.me/5511980548244?text=Teste%20familia%20manda%20um%20salve%20quem%20conseguiu" target="_blank" <i class="bi bi-whatsapp"></i>></a>
+                    </div>
                 </div>
+a
+
             </div>
         </div>
         
