--- a/Site/Public/index.html
+++ b/Site/Public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MariaS</title>
-    <link rel="stylesheet" href="Site/Public/css">
+    <link rel="stylesheet" href="css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,7 +54,7 @@
                     <div class="titulo">Redes Sociais</div>  
                     <div class="footer-icons">
                         <a href="https://www.instagram.com/treinomarias?igsh=M2R1ZXNzeXNqbWti" target="_blank" <i class="bi bi-instagram"></i></a>
-                        <a href="https://wa.me/5511980548244?text=Teste%20familia%20manda%20um%20salve%20quem%20conseguiu" target="_blank" <i class="bi bi-whatsapp"></i>></a>
+                        <a href="https://wa.me/5511980548244?text=Teste%20familia%20manda%20um%20salve%20quem%20conseguiu" target="_blank" <i class="bi bi-whatsapp"></i></a>
                     </div>
                 </div>
 a
