nomeclatura e separação de algumas tags

--- a/Site/Public/index.html
+++ b/Site/Public/index.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+    <!-- Nav -->
     <nav>
         <div class="bg-nav">
             <div class="container">
@@ -27,18 +28,21 @@
             </div>
         </div>
     </nav>
+    <!-- Nav -->
 
+    <!-- Header -->
     <header>
 
         <div class="img1">
             <img src="assets/Marias1.jpeg" alt="Imagem1">
         </div>
-
         <div class="sobre-nos">
             Sobre nós
         </div>
     </header>
+    <!-- Header -->
 
+    <!-- Footer -->
     <footer>
         <div class="bg-footer">
             <div class="footer">
@@ -57,11 +61,11 @@
                         <a href="https://wa.me/5511980548244?text=Teste%20familia%20manda%20um%20salve%20quem%20conseguiu" target="_blank" <i class="bi bi-whatsapp"></i></a>
                     </div>
                 </div>
-a
-
             </div>
         </div>
-        
     </footer>
+    <!-- Footer -->
+
 </body>
 </html>
+
