--- a/Site/Public/index.html
+++ b/Site/Public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 </head>
+
 <body>
     <!-- Nav -->
     <nav>
@@ -27,6 +29,7 @@
                 </div>
             </div>
         </div>
+        
     </nav>
     <!-- Nav -->
 
@@ -55,10 +58,12 @@
                 </div>
                 <div class="barra"></div>
                 <div class="redes">
-                    <div class="titulo">Redes Sociais</div>  
+                    <div class="titulo">Redes Sociais</div>
                     <div class="footer-icons">
-                        <a href="https://www.instagram.com/treinomarias?igsh=M2R1ZXNzeXNqbWti" target="_blank" <i class="bi bi-instagram"></i></a>
-                        <a href="https://wa.me/5511980548244?text=Teste%20familia%20manda%20um%20salve%20quem%20conseguiu" target="_blank" <i class="bi bi-whatsapp"></i></a>
+                        <a href="https://www.instagram.com/treinomarias?igsh=M2R1ZXNzeXNqbWti" target="_blank" <i
+                            class="bi bi-instagram"></i></a>
+                        <a href="https://wa.me/5511980548244?text=Teste%20familia%20manda%20um%20salve%20quem%20conseguiu"
+                            target="_blank" <i class="bi bi-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
@@ -67,5 +72,5 @@
     <!-- Footer -->
 
 </body>
-</html>
 
+</html>
